# omni_mobile_manipulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_docker.sh  package.xml  start_docker.sh
config/: task.info
docker/: Dockerfile  docker_compose.yml
include/omni_mobile_manipulator/: AccessHelperFunctions.h  FactoryFunctions.h  ManipulatorModelInfo.h  MobileManipulatorInterface.h  MobileManipulatorPinocchioMapping.h  MobileManipulatorPreComputation.h
include/omni_mobile_manipulator/constraint/: MobileManipulatorSelfCollisionConstraint.h
include/omni_mobile_manipulator/dynamics/: OmniWheelBasedMobileManipulatorDynamics.h
include/omni_mobile_manipulator/implementation/: AccessHelperFunctionsImpl.h
include/ros/: MobileManipulatorDummyVisualization.h  PoseToTargetTrajectoriesPublisher.h
launch/: mobile_manipulator.launch  omni_mobile_manipulator.launch
meshes/: camera_back_link.STL  camera_front_link.STL  imu_link.STL  laser_link.STL  robot_link.STL  turn_back_left_link.STL  turn_back_right_link.STL  turn_front_left_link.STL  turn_front_right_link.STL  wheel_back_left_link.STL  wheel_back_right_link.STL  wheel_front_left_link.STL  wheel_front_right_link.STL
src/: FactoryFunctions.cpp  MobileManipulatorInterface.cpp  MobileManipulatorPinocchioMapping.cpp  MobileManipulatorPreComputation.cpp
src/constraint/: EndEffectorConstraint.cpp
src/dynamics/: OmniWheelBasedMobileManipulatorDynamics.cpp
src/ros/: MobileManipulatorDistanceVisualization.cpp  MobileManipulatorDummyMRT.cpp  MobileManipulatorDummyVisualization.cpp  MobileManipulatorMpcNode.cpp  PoseToTargetTrajectoriesPublisher.cpp
urdf/: gen3_6dof_no_vision_urdf_arm.urdf  qxrobot_mm.urdf  qxrobot_urdf_v1.csv  qxrobot_urdf_v1.urdf
urdf/xacro/: gen3_macro.xacro  qxrobot_mm.xacro  qxrobot_urdf_v1.xacro  robotiq_2f_85_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro
